welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: ';' expected but 'else' found.
}else{ 
 ^alarmClock:5: error: Unmatched closing brace '}' ignored here
	return "10:00"}
                      ^alarmClock:15: error: Unmatched closing brace '}' ignored here
 }
 ^